--- a/src/recipe-page/index.html
+++ b/src/recipe-page/index.html
@@ -13,7 +13,7 @@
 
         <title>Frontend Mentor | Recipe page</title>
 
-        <link rel="stylesheet" href="/recipe-page/styles" />
+        <link rel="stylesheet" href="/recipe-page/styles.css" />
     </head>
 
     <body>
