--- a/packages/recipe-page/solution/index.html
+++ b/packages/recipe-page/solution/index.html
@@ -11,6 +11,9 @@
         <!-- Attribution styles -->
         <style>
             .attribution {
+                position: fixed;
+                bottom: 0;
+                width: 100%;
                 font-size: 11px;
                 text-align: center;
             }
@@ -28,7 +31,7 @@
         <div class="attribution">
             Challenge by
             <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by <a href="#">Thanos Kontis</a>.
         </div>
     </body>
 </html>
