--- a/recipe/index.html
+++ b/recipe/index.html
@@ -32,7 +32,7 @@
         <div class="attribution">
             Challenge by
             <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-            >. Coded by <a href="#">Thanos Kontis</a>.
+            >. Coded by <a href="https://github.com/tkontis/frontend-mentor/tree/main/packages/recipe">Thanos Kontis</a>.
         </div>
     </body>
 </html>
